--- a/lab2/index.html
+++ b/lab2/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
-</head>
-<body>
+<html lang="en" dir="ltr">
+	<head>
+		<meta charset="utf-8">
+		<title>Lab 2 - My First HTML</title>
+	</head>
+	<body>
+		<h1>Hello World</h1>
 
-</body>
+		<p>This will be a paragraph.</p>
+
+	</body>
 </html>
