Added picture to cst251/index.html

--- a/index.html
+++ b/index.html
@@ -6,9 +6,18 @@
 </head>
 <body>
 	<main>
-		<p>This page was generated from Wes' File Structure Template Repo.</p>
+		<h1>Gabby Lazarcheff</h1>
+		<img src="img/other_picture_of_me.jpg">
 
-		<p>Go crazy and customize me.</p>
+		<p>Hello there! I am Gabby Lazarcheff! I am from Oakhurst, CA, which is a
+		small town right outside Yosemite National Park, and I am a Communications
+		Design Major with a concentration in Visual Design. Art has always been a
+		big part of my life! I love music, crafts, drawing, and journaling.
+		I also love to listen to audiobooks and watch movies.</p>
+
+		<p> I am very excited to learn how to code as it is something that I have
+		never done before! I hope that after this class I will be able to take
+		what I have learned and apply it towards my degree and design interests!</p>
 	</main>
 
 
