Lab 3 and Bulleted List on cst251 Index

--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
 		<p> I am very excited to learn how to code as it is something that I have
 		never done before! I hope that after this class I will be able to take
 		what I have learned and apply it towards my degree and design interests!</p>
+
+		<h2>Labs</h2>
+		<ul>
+		<li><a href="lab2/">Lab 2: My First HTML</a></li>
+		<li><a href="lab3/">Lab 3: File Structures</a></li>
+		<li><a href="lab4/">Lab 4: File Transfer</a></li>
+		<li><a href="lab5/">Lab 5: More HTML</a></li>
+		<li><a href="lab6/">Lab 6: More Complicated HTML</a></li>
+		<ul/>
+
 	</main>
 
 
