--- a/lab3/index.html
+++ b/lab3/index.html
@@ -1,11 +1,47 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
-</head>
-<body>
+<html lang="en" dir="ltr">
+	<head>
+		<meta charset="utf-8">
+		<title>Lab 3: File Structures</title>
+	</head>
+	<body>
+		<h1>Lab 3: File Structures</h1>
 
-</body>
+		<h2>Challange</h2>
+
+		<p>The purpose of this lab was to create well organized local file
+			structures, as well learning to add images and links within our website.
+		</p>
+
+		<h2>Problems</h2>
+
+		<p>We had some trouble when inserting images because we had to resize them
+			and we continuously forgot to add closing tags.</p>
+
+			<h2>Results</h2>
+
+			<p>Thankfully, most of our file structure was already complete due to the
+				template we downloaded at the beginning of the class. In the end, we
+				were able to add images to our pages as well as a bulleted list of our
+				labs on our home pages. We also used techniques we already learned to
+				add heading, subheading, and paragraph tags in order to create a well
+				organized document. Overall, this lab strengthened our confidence and
+				understanding of HTML and file structure.</p>
+
+				<img src="img/file_structure_screenshot.jpg"width=950>
+				<p>Screenshot of File Structure in Finder</p>
+
+				<img src="img/screenshot_cst251_index.png"width=950>
+				<p>Screenshot of cst251/index.html</p>
+
+				<img src="img/screenshot_index_in_browser.png"width=950>
+				<p>Screenshot of cst251/index.html in Browser</p>
+
+				<img src="img/screenshot_cst251:lab3_index.png"width=950>
+				<p>Screenshot of cst251/lab3/index.html</p>
+
+				<img src="img/screenshot_lab3_in_browser.png"width=950>
+				<p>Screenshot of cst251/lab3/index.html in Browser</p>
+
+	</body>
 </html>
