Lab 4 - Edited Index and added screenshots

--- a/lab4/index.html
+++ b/lab4/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
-	<link rel="stylesheet" type="text/css" href="css/lab.css">
-</head>
-<body>
+<html lang="en" dir="ltr">
+	<head>
+		<meta charset="utf-8">
+		<title>Lab 4: File Transfer</title>
+	</head>
+	<body>
+		<h1>Lab 4: File Transfer</h1>
 
-</body>
+		<h2>Challange</h2>
+
+		<p>The purpose of this lab was to test our files locally and publish them to
+			the server through Github.</p>
+
+		<h2>Problems</h2>
+
+		<p>Fortunately we have been pushing our files to the server since Lab 2, so
+			we did not run into any problems.</p>
+
+		<h2>Results</h2>
+
+			<p>We created a document describing the challenge, problems, and results
+				of the lab. We added heading, subheading, paragraph, and image tags and
+				then successfully published our files to the server through Github.</p>
+
+				<img src="img/lab4_index_screenshot.png"width=950>
+				<p>Screenshot of cst251/lab4/index.html</p>
+
+				<img src="img/lab4_index_in_browser_screenshot.png"width=950>
+				<p>Screenshot of cst251/lab4/index.html in Browser</p>
+
+				<img src="img/lab4_github_screenshot.png"width=950>
+				<p>Github Screenshot</p>
+
+	</body>
 </html>
