Lab 5 - edited index, added links and images

--- a/lab5/index.html
+++ b/lab5/index.html
@@ -1,11 +1,56 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 5: More HTML</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
 
 </body>
+</html>
+
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+	<head>
+		<meta charset="utf-8">
+		<title>Lab 5</title>
+	</head>
+	<body>
+		<h1>Lab 5: More HTML</h1>
+
+		<h2>Challange</h2>
+
+		<p>The purpose of this lab was to create a page that had images and links to
+			different pages. The purpose was to also apply different methods of
+			displaying links such as linking both text and images.</p>
+
+		<h2>Problems</h2>
+
+		<p>Since we already knew how to add images and we had the lecture to refer
+			back to, we finished the lab with ease. When we got stuck we would look
+			back at the lecture powerpoint.</p>
+
+		<h2>Results</h2>
+
+			<p>We created web pages that contain multiple images and display links
+				through images and text. We also added a link that takes you back to the
+				homepage from the lab page.</p>
+
+				<div>
+				<h3>My Instagram and YouTube</h3>
+				<a href="https://www.instagram.com/gab_laz18/"><img src="img/instagram_
+					logo.png"height=200 width=200> <a href="https://youtu.be/9aukLSSQyjg">
+						<img src="img/youtube_logo.png"height=200>
+				</a>
+				</div>
+
+				<div>
+				<h3>My Artwork</h3>
+				<img src="img/lab5_image01.jpg"height=550> <img src="img/lab5_image02.jpg"height=550>
+				<p>These are some of my original artworks</p>
+				</div>
+
+				<a href="../index.html">Back to Homepage</a>
+	</body>
 </html>
