--- a/lab7/index.html
+++ b/lab7/index.html
@@ -14,14 +14,14 @@
 			<img src="img/lab7_image.jpg" width=250>
 			</div>
 
-		<div id="paragraphs">
-			<div class="challenge">
+		<div class="summary_of_efforts">
+			<div id="challenge">
 				<h2>Challenge</h2>
 				<p>The purpose of this lab was to create our Lab 7 Index and create a
 					style sheet to style it with.</p>
 				</div>
 
-			<div class="problems">
+			<div id="problems">
 				<h2>Problems</h2>
 				<p> We had to experiment to figure out what looked good aesthetically to
 					us. We had trouble figuring out how to style our classes and IDs but
@@ -29,7 +29,7 @@
 					test different elements and refine our page layout.</p>
 				</div>
 
-			<div class="results">
+			<div id="results">
 				<h2>Results</h2>
 				<p>In the end we each created a stylized webpage complete with images,
 				colored backgrounds, margins, and borders. </p>
