Added CSS to homepage

--- a/index.html
+++ b/index.html
@@ -5,34 +5,37 @@
 	<link rel="stylesheet" type="text/css" href="css/site.css">
 </head>
 <body>
-	<main>
+	<main id=content>
 		<h1>Gabby Lazarcheff</h1>
+
 		<img src="img/other_picture_of_me.jpg">
+		
+		<article>
 
-		<p>Hello there! I am Gabby Lazarcheff! I am from Oakhurst, CA, which is a
-		small town right outside Yosemite National Park, and I am a Communications
-		Design Major with a concentration in Visual Design. Art has always been a
-		big part of my life! I love music, crafts, drawing, and journaling.
-		I also love to listen to audiobooks and watch movies.</p>
+			<p>Hello there! I am Gabby Lazarcheff! I am from Oakhurst, CA, which is a
+				small town right outside Yosemite National Park, and I am a Communications
+				Design Major with a concentration in Visual Design. Art has always been a
+				big part of my life! I love music, crafts, drawing, and journaling.
+				I also love to listen to audiobooks and watch movies.</p>
 
-		<p> I am very excited to learn how to code as it is something that I have
-		never done before! I hope that after this class I will be able to take
-		what I have learned and apply it towards my degree and design interests!</p>
+				<p> I am very excited to learn how to code as it is something that I have
+				never done before! I hope that after this class I will be able to take
+				what I have learned and apply it towards my degree and design interests!</p>
+			</article>
 
-		<h2>Labs</h2>
-		<ul>
-		<li><a href="lab2/">Lab 2: My First HTML</a></li>
-		<li><a href="lab3/">Lab 3: File Structures</a></li>
-		<li><a href="lab4/">Lab 4: File Transfer</a></li>
-		<li><a href="lab5/">Lab 5: More HTML</a></li>
-		<li><a href="lab6/">Lab 6: More Complicated HTML</a></li>
-		<li><a href="lab7/">Lab 7: Intro to CSS</a></li>
-		<li><a href="lab8/">Lab 8: CSS Selectors</a></li>
-		<li><a href="lab9/">Lab 9: Styling Block Elements</a></li>
-		<ul/>
-
+		<nav>
+			<h2>Labs</h2>
+				<ul>
+					<li><a href="lab2/">Lab 2: My First HTML</a></li>
+					<li><a href="lab3/">Lab 3: File Structures</a></li>
+					<li><a href="lab4/">Lab 4: File Transfer</a></li>
+					<li><a href="lab5/">Lab 5: More HTML</a></li>
+					<li><a href="lab6/">Lab 6: More Complicated HTML</a></li>
+					<li><a href="lab7/">Lab 7: Intro to CSS</a></li>
+					<li><a href="lab8/">Lab 8: CSS Selectors</a></li>
+					<li><a href="lab9/">Lab 9: Styling Block Elements</a></li>
+				<ul/>
 	</main>
-
 
 </body>
 </html>
