--- a/lab2/index.html
+++ b/lab2/index.html
@@ -3,19 +3,23 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Lab 2 - My First HTML</title>
+			<link rel="stylesheet" type="text/css" href="css/lab.css">
 	</head>
 	<body>
-		<h1>Hello World</h1>
+		<main id=content>
+			<h1>Hello World</h1>
 
-		<p>My partner is Amanda. We met last semester when we had to do a group 
-			project together in our FYS 145 class. We found that we work well
-			together, and we are excited for the opportunity to work together again as
-			partners for CST251 Web Tools. We are both very new to coding, but we are
-			looking forward to the chance to learn! Our attitudes towards education
-			are very similar and we are both comfortable with taking on more
-			leadership roles in classroom settings. We also both enjoy creating
-			digital art and are Communication Design majors hoping to focus on visual
-			design.</p>
+			<p>My partner is Amanda. We met last semester when we had to do a group
+				project together in our FYS 145 class. We found that we work well
+				together, and we are excited for the opportunity to work together again as
+				partners for CST251 Web Tools. We are both very new to coding, but we are
+				looking forward to the chance to learn! Our attitudes towards education
+				are very similar and we are both comfortable with taking on more
+				leadership roles in classroom settings. We also both enjoy creating
+				digital art and are Communication Design majors hoping to focus on visual
+				design.</p>
 
+			<a href="../index.html">Back to Homepage</a>
+		</main>
 	</body>
 </html>
