--- a/lab2/index.html
+++ b/lab2/index.html
@@ -3,13 +3,14 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Lab 2 - My First HTML</title>
-			<link rel="stylesheet" type="text/css" href="css/lab.css">
+			<link rel="stylesheet" type="text/css" href="../css/site.css">
+
 	</head>
 	<body>
-		<main id=content>
+		<main id="content">
 			<h1>Hello World</h1>
 
-			<p>My partner is Amanda. We met last semester when we had to do a group
+			<section>My partner is Amanda. We met last semester when we had to do a group
 				project together in our FYS 145 class. We found that we work well
 				together, and we are excited for the opportunity to work together again as
 				partners for CST251 Web Tools. We are both very new to coding, but we are
@@ -17,7 +18,8 @@
 				are very similar and we are both comfortable with taking on more
 				leadership roles in classroom settings. We also both enjoy creating
 				digital art and are Communication Design majors hoping to focus on visual
-				design.</p>
+				design.
+			</section>
 
 			<a href="../index.html">Back to Homepage</a>
 		</main>
