--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<h1>Gabby Lazarcheff</h1>
 
 		<img src="img/other_picture_of_me.jpg">
-		
+
 		<article>
 
 			<p>Hello there! I am Gabby Lazarcheff! I am from Oakhurst, CA, which is a
@@ -34,6 +34,7 @@
 					<li><a href="lab7/">Lab 7: Intro to CSS</a></li>
 					<li><a href="lab8/">Lab 8: CSS Selectors</a></li>
 					<li><a href="lab9/">Lab 9: Styling Block Elements</a></li>
+					<li><a href="lab10/">Lab 10: Styling Text Elements</a></li>
 				<ul/>
 	</main>
 
