--- a/lab10/index.html
+++ b/lab10/index.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8">
 		<title>Lab 10</title>
 		<link rel="stylesheet" type="text/css" href="css/lab.css">
+		<link rel="preconnect" href="https://fonts.gstatic.com">
+		<link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300&display=swap" rel="stylesheet">
 	</head>
 	<body>
 		<div id="content">
