Lab 12 - added index and CSS, added link to homepage

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 		<img src="img/other_picture_of_me.jpg">
 
 		<article>
-
 			<p>Hello there! I am Gabby Lazarcheff! I am from Oakhurst, CA, which is a
 				small town right outside Yosemite National Park, and I am a Communications
 				Design Major with a concentration in Visual Design. Art has always been a
@@ -38,7 +37,9 @@
 					<li><a href="lab9/">Lab 9: Styling Block Elements</a></li>
 					<li><a href="lab10/">Lab 10: Styling Text Elements</a></li>
 					<li><a href="lab11/">Lab 11: Advanced Block-level Styling I</a></li>
+					<li><a href="lab11/">Lab 12: Advanced Block-level Styling II</a></li>
 				<ul/>
+		</nav>
 	</main>
 
 </body>
