Lab 12-Bonus Task added image

--- a/lab12/index.html
+++ b/lab12/index.html
@@ -17,7 +17,7 @@
 
 		<div id="floated">
 			<div id="center-img">
-				<img id="center-img" src="img/lab11_image_1.png">
+				<img id="center-img" src="img/lab12_image_1.png">
 			</div>
 				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
 					eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
@@ -30,7 +30,7 @@
 			</div>
 
 			<div id="center-both">
-				<img id="center-both" src="img/lab11_image_2.jpg">
+				<img id="center-both" src="img/lab12_image_2.jpg">
 			</div>
 
 			<div id="center-horz">
@@ -39,7 +39,7 @@
 					minim veniam, quis nostrud exercitation ullamco laboris nisi ut
 					aliquip ex ea commodo consequat. Duis aute irure dolor in
 					reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-					pariatur. Excepteur sint occaecat cupidatat non proident, sunt in 
+					pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
 					culpa qui officia deserunt mollit anim id est laborum.
 				</p>
 			</div>
@@ -71,5 +71,12 @@
 				</section>
 			</article>
 	</div>
+
+	<div id="bonus-img-border">
+		<div id="bonus-img">
+			<img id="bonus-img" src="img/lab12_image_4.png">
+		</div>
+	</div>
+
 </body>
 </html>
