Lab 13 fake.html - fixing link and placement of lab13 text

--- a/lab13_fake.html/index.html
+++ b/lab13_fake.html/index.html
@@ -11,7 +11,7 @@
 			<nav id="links">
 					<a id="lab_css" href="css/lab.css">Lab CSS</a>
 					<a id="homepage" href="../index.html">Homepage</a>
-					<a id="lab" href="../lab13.html">Lab 13</a>
+					<a id="lab" href="../lab13.html/index.html">Lab 13</a>
 			</nav>
 
 			<div id="iphone">
