--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 					<li><a href="lab10/">Lab 10: Styling Text Elements</a></li>
 					<li><a href="lab11/">Lab 11: Advanced Block-level Styling I</a></li>
 					<li><a href="lab12/">Lab 12: Advanced Block-level Styling II</a></li>
+					<li><a href="lab13/">Lab 13: Typography I</a></li>
 				<ul/>
 		</nav>
 	</main>
