Lab 16 - Bonus Task

--- a/lab16/index.html
+++ b/lab16/index.html
@@ -15,9 +15,9 @@
 			</div>
 		</nav>
 
-			<img src="img/lab14_image_1.png">
+			<img src="img/lab16_image_1.png">
 
-		<main id="content">
+		<div id="content">
 			<div id="title">
 				<h1>Lab 16: Fancy CSS II</h1>
 			</div>
@@ -44,7 +44,7 @@
 				</p>
 			</section>
 		</article>
-	</main>
+	</div>
 
 	<div id="column-text">
 		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
